%% Cấu trúc class / module Shared Library
classDiagram
  class bankingDemoPipeline {
    <<vars/ entry point>>
    +call(Map config)
    +setupParameters()
  }

  class PipelineConfig {
    <<src/com/bankingdemo>>
    +SERVICES Map
    +mergeDefaults(user) Map
  }

  class ChangeDetector {
    +buildTargetChoices() List
    +resolve(steps, cfg) List~String~
    -detectChanged() List
  }

  class KanikoBuilder {
    +buildAndPush(steps, cfg, serviceName)
  }

  class GitOpsUpdater {
    +bumpImageTags(steps, cfg, services)
  }

  class GitRef {
    +imageTag(steps) String
  }

  class Jenkinsfile {
    @Library banking-demo
    harborHost, gitBranch...
  }

  Jenkinsfile --> bankingDemoPipeline : gọi
  bankingDemoPipeline --> PipelineConfig : mergeDefaults
  bankingDemoPipeline --> ChangeDetector : resolve targets
  bankingDemoPipeline --> KanikoBuilder : build loop
  bankingDemoPipeline --> GitOpsUpdater : bump tags
  KanikoBuilder --> PipelineConfig : SERVICES meta
  KanikoBuilder --> GitRef : imageTag
  GitOpsUpdater --> PipelineConfig : helmKey
  GitOpsUpdater --> GitRef : imageTag
  ChangeDetector --> PipelineConfig : SERVICES keys

  note for PipelineConfig "5 services Phase 8\napi-producer, auth, account,\ntransfer, notification"
  note for KanikoBuilder "Credential: harbor-ci-push\n(Vault → JCasC)"
  note for GitOpsUpdater "Credential: github-gitops-push\n→ push values-images.yaml"
